--- a/lab1.Rmd
+++ b/lab1.Rmd
@@ -38,7 +38,20 @@ plot(exp.draws.1)
 plot(exp.draws.0.1,exp.draws.0.5)
 ```
 <br/>**4. We’d now like to compare the properties of each of our vectors. Begin by creating a vector of the means of each of our five distributions in the order we created them and saving this to a variable name of your choice. Using this and other similar vectors, create the following scatterplots:**
+```{r}
+means<-c(mean(exp.draws.0.1),mean(exp.draws.0.5),mean(exp.draws.1),mean(exp.draws.5),mean(exp.draws.10))
+```
   **a. The five means versus the five rates used to generate the distribution.**
-  
-b. The standard deviations versus the rates.
-c. The means versus the standard deviations. **
+```{r}
+rates<-c(0.1,0.5,1,5,10)
+plot(rates,means)
+```
+<br/>**b. The standard deviations versus the rates.**
+```{r}
+sds<-c(sd(exp.draws.0.1),sd(exp.draws.0.5),sd(exp.draws.1),sd(exp.draws.5),sd(exp.draws.10))
+plot(rates,sds)
+```
+<br/>**c. The means versus the standard deviations. **
+```{r}
+plot(sds,means)
+```
