--- a/lab1.Rmd
+++ b/lab1.Rmd
@@ -55,3 +55,25 @@ plot(rates,sds)
 ```{r}
 plot(sds,means)
 ```
+# part2   
+**5. R’s capacity for data and computation is large to what was available 10 years ago.**   
+**a. To show this, generate 1.1 million numbers from the standard exponential distribution and store them in a vector called big.exp.draws.1. Calculate the mean and standard deviation.**
+```{r}
+big.exp.draws.1<-rexp(n=1100000)
+mean(big.exp.draws.1)
+sd(big.exp.draws.1)
+```
+**b. Plot a histogram of big.exp.draws.1. Does it match the function 1 − e−x? Should it?**
+```{r}
+hist(big.exp.draws.1)
+```
+不符合；不需要，需要符合1-exp(-x)的导数
+**c. Find the mean of all of the entries in big.exp.draws.1 which are strictly greater than 1. You may need to first create a new vector to identify which elements satisfy this.**
+
+**d. Create a matrix, big.exp.draws.1.mat, containing the the values in big.exp.draws.1, with 1100 rows and 1000 columns. Use this matrix as the input to the hist() function and save the result to a variable of your choice. What happens to your data?**
+
+**e. Calculate the mean of the 371st column of big.exp.draws.1.mat.**
+
+**f. Now, find the means of all 1000 columns of big.exp.draws.1.mat simultaneously. Plot the histogram of column means. Explain why its shape does not match the histogram in problem 5b).**
+
+**g. Take the square of each number in big.exp.draws.1, and find the mean of this new vector. Explain this in terms of the mean and standard deviation of big.exp.draws.1. Hint: think carefully about the formula R uses to calculate the standard deviation.**
