--- a/lab1.Rmd
+++ b/lab1.Rmd
@@ -67,7 +67,7 @@ sd(big.exp.draws.1)
 ```{r}
 hist(big.exp.draws.1)
 ```
-不符合；不需要，需要符合1-exp(-x)的导数
+<br/>不符合；不需要，需要符合1-exp(-x)的导数   
 **c. Find the mean of all of the entries in big.exp.draws.1 which are strictly greater than 1. You may need to first create a new vector to identify which elements satisfy this.**
 
 **d. Create a matrix, big.exp.draws.1.mat, containing the the values in big.exp.draws.1, with 1100 rows and 1000 columns. Use this matrix as the input to the hist() function and save the result to a variable of your choice. What happens to your data?**
